docs: Update AGENTS.md for multi-agent collaboration
- Updated for 2025-11-01 current status
- Added comprehensive test execution guide
- Added Browser Binding fix status
- Included Playwright test skip analysis
- Added common issues and troubleshooting
- Added agent collaboration workflows